scrollbar and dnd fix

--- a/src/components/UI/ConstructorElementTemplate/ConstructorElementTemplate.module.css
+++ b/src/components/UI/ConstructorElementTemplate/ConstructorElementTemplate.module.css
@@ -1,22 +1,22 @@
 @keyframes hover {
     0% {
-        box-shadow: 0px 0px 7px 3px rgba(223, 70, 231, 0.2);
+        box-shadow: 0px 0px 6px 3px rgba(223, 70, 231, 0.2);
     }
 
     25% {
-        box-shadow: 0px 0px 7px 3px rgba(223, 70, 231, 1);
+        box-shadow: 0px 0px 6px 3px rgba(223, 70, 231, 1);
     }
 
     50% {
-        box-shadow: 0px 0px 7px 3px rgba(223, 70, 231, 0.2);
+        box-shadow: 0px 0px 6px 3px rgba(223, 70, 231, 0.2);
     }
 
     75% {
-        box-shadow: 0px 0px 7px 3px rgba(223, 70, 231, 1);
+        box-shadow: 0px 0px 6px 3px rgba(223, 70, 231, 1);
     }
 
     100% {
-        box-shadow: 0px 0px 7px 3px rgba(223, 70, 231, 0.2);
+        box-shadow: 0px 0px 6px 3px rgba(223, 70, 231, 0.2);
     }
 }
 
